--- a/src/App.sass
+++ b/src/App.sass
@@ -292,7 +292,7 @@
             .modal
 
                 width: 100%
-                height: 100%
+                // height: 100%
                 transition: 0.3s
                 padding: 20px
 
