--- a/src/App.sass
+++ b/src/App.sass
@@ -189,7 +189,7 @@
                         cursor: pointer
         .error-msg
             color: red
-            
+
         .sendDoc
             display: block
             margin: auto
@@ -342,8 +342,8 @@
                             display: block
 
                         input
+                            display: none
                             position: absolute
-                            background-color: pink
                             top: 0
                             left: 0
                             width: 100%
