--- a/src/App.sass
+++ b/src/App.sass
@@ -304,9 +304,10 @@
                 color: #fbc502a6
 
             .modal
-
+                position: absolute
+      
                 width: 100%
-                // height: 100%
+                height: 100%
                 transition: 0.3s
                 padding: 20px
 
@@ -320,6 +321,10 @@
                 p
                     font-size: 20px
 
+                .email
+                    margin: 15px auto 
+                    // padding: 0
+
                 .docLoad
                     padding: 0px 0
                     width: 100%
@@ -327,14 +332,14 @@
                     flex-direction: column
 
                     svg
-                        width: 100px
-                        font-size: 80px
+                        width: 80px
+                        font-size: 60px
 
                     img
                         width: 125px
 
                     div
-                        padding: 15px
+                        padding: 10px
                         position: relative
 
                         span
@@ -342,6 +347,7 @@
                             display: block
 
                         input
+                            
                             display: none
                             position: absolute
                             top: 0
