--- a/src/components/passScaner/PasScaner.sass
+++ b/src/components/passScaner/PasScaner.sass
@@ -4,7 +4,7 @@
     top: 0
     left: 0
     width: 100%
-    // height: 100%
+    height: 100%
     // filter: grayscale(50%)
 
     .arrow
@@ -20,7 +20,7 @@
         position: absolute
         width: 90%
         height: 200px
-        top: 50%
+        top: 40%
         left: 50%
         transform: translate(-50%, -50%)
         border: 2px solid #fff
@@ -30,10 +30,13 @@
     .face
         position: absolute
         width: 200px
-        height: 400px
-        top: 50%
+        height: 330px
+        top: 40%
         left: 50%
         transform: translate(-50%, -50%)
         border: 2px solid #fff
         border-radius: 500px
         z-index: 102
+
+    .react-html5-camera-photo
+        height: 80%        
