--- a/src/App.sass
+++ b/src/App.sass
@@ -307,7 +307,7 @@
                 position: absolute
       
                 width: 100%
-                height: 100%
+                // height: 100%
                 transition: 0.3s
                 padding: 20px
 
