--- a/src/App.sass
+++ b/src/App.sass
@@ -304,6 +304,9 @@
                 color: #fbc502a6
 
             .modal
+                transform: none
+                top: 0
+                left: 0
                 position: absolute
       
                 width: 100%
