--- a/src/App.sass
+++ b/src/App.sass
@@ -304,13 +304,12 @@
                 color: #fbc502a6
 
             .modal
-                transform: none
                 top: 0
                 left: 0
                 position: absolute
       
                 width: 100%
-                // height: 100%
+                height: 100%
                 transition: 0.3s
                 padding: 20px
 
