--- a/src/App.sass
+++ b/src/App.sass
@@ -363,6 +363,7 @@
                 border: none
                 font-size: 16px
                 padding: 10px 60px
+                margin: 10px
                 color: #000
                 font-weight: 600
                 border-radius: 10px
