--- a/src/App.sass
+++ b/src/App.sass
@@ -358,12 +358,11 @@
                             height: 100%
             .sendDoc
                 display: block
-                margin: auto
                 background-color: #00a2e4
                 border: none
                 font-size: 16px
                 padding: 10px 60px
-                margin: 10px
+                margin: 10px auto
                 color: #000
                 font-weight: 600
                 border-radius: 10px
