--- a/src/components/passScaner/PasScaner.sass
+++ b/src/components/passScaner/PasScaner.sass
@@ -39,4 +39,7 @@
         z-index: 102
 
     .react-html5-camera-photo
-        height: 90%        
+        height: 100%
+        video
+            width: 100%
+            height: 100%       
