--- a/src/components/passScaner/PasScaner.sass
+++ b/src/components/passScaner/PasScaner.sass
@@ -39,7 +39,9 @@
         z-index: 102
 
     .react-html5-camera-photo
+        // top: 10%
         height: 100%
         video
-            width: 100%
-            height: 100%       
+            // width: 100%
+            // height: 100%  
+            object-fit: cover
