--- a/src/App.sass
+++ b/src/App.sass
@@ -122,6 +122,9 @@
 
         p
             color: #fbc502a6
+            
+            a
+                color: #00a2e4
 
         .modal
             transition: 0.3s
@@ -307,9 +310,9 @@
                 top: 0
                 left: 0
                 position: absolute
-      
+
                 width: 100%
-  
+
                 transition: 0.3s
                 padding: 20px
 
@@ -324,7 +327,7 @@
                     font-size: 20px
 
                 .email
-                    margin: 15px auto 
+                    margin: 15px auto
                     // padding: 0
 
                 .docLoad
@@ -349,7 +352,7 @@
                             display: block
 
                         input
-                            
+
                             display: none
                             position: absolute
                             top: 0
