--- a/src/App.sass
+++ b/src/App.sass
@@ -312,6 +312,8 @@
                 position: absolute
 
                 width: 100%
+                height: 100%
+                overflow: scroll
 
                 transition: 0.3s
                 padding: 20px
